refactor: update method calls and improve logging format